[project]
name = "pywaze"
version = "0.1.0"
description = "Asynchronous Waze client for calculating routes and travel times."
authors = [
    { name = "Kevin Stillhammer", email = "kevin.stillhammer@gmail.com" }
]
license = "MIT"
repository = "http://github.com/eifinger/pywaze"
dependencies = [
    "httpx>=0.24.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "blacken-docs>=1.14.0",
    "codespell>=2.2.5",
    "mypy>=1.4.1",
    "pre-commit>=3.3.3",
    "vulture>=2.7",
    "yamllint>=1.32.0",
    "ruff>=0.0.281",
    "pre-commit-hooks>=4.4.0",
    "respx>=0.20.1",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing --cov=src/pywaze --asyncio-mode=auto"

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
